--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -13,7 +13,7 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.ui.filterable.FilterableFragment">
+        tools:context=".view.ui.FilterFragment">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
