--- a/app/src/main/res/layout/fragment_media_info.xml
+++ b/app/src/main/res/layout/fragment_media_info.xml
@@ -23,7 +23,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".view.ui.details.movie.MovieInfoFragment">
+                tools:context=".view.ui.MediaInfoFragment">
 
 
                 <com.borjabravo.readmoretextview.ReadMoreTextView
