--- a/app/src/main/res/layout/fragment_actor_details.xml
+++ b/app/src/main/res/layout/fragment_actor_details.xml
@@ -108,11 +108,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/birthPlace"
-                        android:minHeight="50dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
                         android:layout_toEndOf="@id/ivAvatar"
+                        android:minHeight="50dp"
                         android:orientation="horizontal"
                         android:weightSum="100">
 
@@ -194,7 +194,8 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="20dp"
             android:backgroundTint="@color/vermilion_100"
-            android:src="@drawable/ic_baseline_favorite_border_24"/>
+            android:src="@drawable/ic_favorite_border"
+            android:contentDescription="Add to favorite" />
 
         <com.example.cinemates.util.RecyclerViewEmptySupport
             android:id="@+id/recyclerView"
