--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -47,13 +47,9 @@
     </fragment>
     <dialog
         android:id="@+id/bottomSheetFragment"
-        android:name="com.example.cinemates.view.ui.BottomSheetFragment"
+        android:name="com.example.cinemates.view.ui.details.movie.BottomSheetFragment"
         tools:layout="@layout/fragment_bottomsheet"
-        android:label="BottomSheetFragment">
-        <argument
-            android:name="movie"
-            app:argType="com.example.cinemates.model.data.Movie" />
-    </dialog>
+        android:label="BottomSheetFragment"/>
     <fragment
         android:id="@+id/movieDetailsFragment"
         android:name="com.example.cinemates.view.ui.details.movie.MovieDetailsFragment"
@@ -65,6 +61,9 @@
         <action
             android:id="@+id/action_movieDetailsFragment_to_collectionDialogFragment"
             app:destination="@id/collectionDialogFragment" />
+        <action
+            android:id="@+id/action_movieDetailsFragment_to_bottomSheetFragment"
+            app:destination="@id/bottomSheetFragment" />
     </fragment>
     <action
         android:id="@+id/action_global_movieDetailsFragment"
@@ -83,6 +82,7 @@
     <action
         android:id="@+id/action_global_actorDetailsFragment"
         app:launchSingleTop="true"
+        app:popUpToInclusive="true"
         app:destination="@id/actorDetailsFragment" />
     <dialog
         android:id="@+id/collectionDialogFragment"
