--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -50,10 +50,12 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">32sp</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
     </style>
 
     <style name="MyCustomTextAppearanceSmallTab" parent="MyCustomTextAppearance">
         <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/lato</item>
     </style>
     <!--  Fine TabLayout Style-->
 
